-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.4, 6.3.0
-
None
-
Windows 10
-
-
7105c49262 (qt/qtmultimedia/dev) 7105c49262 (qt/tqtc-qtmultimedia/dev) 19c05fb683 (qt/qtmultimedia/6.3) 19c05fb683 (qt/tqtc-qtmultimedia/6.3) 8a1f4a692c (qt/tqtc-qtmultimedia/6.2)
While trying to find a reason of "WinRT originate error - 0xC00D5212 : 'Decoder error'."
in my app, and simulate it on standalone example, I found probably another issue, see below
There're issues with playing several Hi-Res videos simultaneously with OpenGL RHI.
Also it might be noticed that the frame rate for this videos is various for the same source.
See example . https://drive.google.com/file/d/1lJxNwJ-EXgx79H8FYVqP2VN8WUyz_MUg/view?usp=sharing.
Sorry, I had to upload it on my Google Drive because it's exceeded Jira's limit in 30 MB.
The sample video itself is 42MB.
Steps to reproduce:
- Build and run example
- Since started it plays the same video file in 4 Video controls simultaneously
- The issue can be observed right after start, or after clicking on "Reload videos" button several times.
- is duplicated by
-
QTBUG-104634 Switching Default Audio Device During Play Stops the Video
-
- Closed
-
- relates to
-
QTBUG-100363 [REG 6.2.2 - 6.2.3] Video is always black with OpenGL RHI
-
- Closed
-
-
QTBUG-101293 [WMF] "session close time out!" warning on MediaPlayer destruction
-
- Closed
-