Windows: Avoid changing the player topology for HEVC

Changing the topology after a HEVC stream is loaded fails, while it
works as expected for other codecs. This causes other issues as the
player enters an error state. Ignoring the track change for HEVC
streams as a workaround. Also giving more time for closing the session.

Fixes: QTBUG-102707
Change-Id: Ie02951130df5fc809f89d564a7442ea0e4d16b6b
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 7105c492621fc618799e57d06c94a6b816561770)
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>